fixed margin problem on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,9 @@
 * {
     box-sizing: content-box;
 }
+html {
+    overflow-x: hidden;
+}
 body {
     margin:0%;
     padding:0%;
